--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "moment": "^2.22.1",
+    "simple-oauth2": "^1.5.2",
     "vue": "^2.5.2",
     "vue-localstorage": "^0.6.2",
     "vue-resource": "^1.5.0",
