--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "@microsoft/microsoft-graph-client": "^1.0.0",
     "moment": "^2.22.1",
     "simple-oauth2": "^1.5.2",
     "vue": "^2.5.2",
